	PR rtl-optimization/70222 	* combine.c (simplify_shift_const_1): For A >> B >> C LSHIFTRT 	optimization if mode is different from result_mode, queue up masking 	of the result in outer_op.  Formatting fix.

* gcc.c-torture/execute/pr70222-1.c: New test.
	* gcc.c-torture/execute/pr70222-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@234222 138bc75d-0d04-0410-961f-82ee72b054a4